k8s/ingress.yaml
# ingress.yaml

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: handwritten-digit-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: <YOUR_HOST>  # Replace with your host/domain
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: <YOUR_SERVICE_NAME>  # Replace with your service name
                port:
                  number: 80  # Port of your service
